# git-tagging

./: README.md  flake.nix  pyproject.toml
nix/: devShells.nix
pythonedaartifacteventgittagging/: tag_created.py  tag_credentials_provided.py  tag_credentials_requested.py  tag_requested.py
